# libedgetpu

./: .ccls  .gitignore  default.nix  libedgetpu.nix  meson.build  shell.nix
driver/: meson.build
driver/beagle/: meson.build
driver/kernel/: meson.build
driver/usb/: meson.build
nix/: abseil-cpp.nix  default.nix  sources.json
port/: meson.build
port/default/: meson.build
tflite/: meson.build
